fixed up blog section

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,33 +1,222 @@
----
-layout: post
----
+<!DOCTYPE html>
+<html class="no-js">
 
-{% include nav.html %}
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+    <meta name="description"
+        content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 
-<section class="section pt-4">
-    <div class="container text-center video-container">
-        <!--<h1 class="aqua">Still</h1>
-      <h1 class="white">Waves</h1>
-      -->
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/owl.carousel.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/ionicons.min.css">
+    <!--<link rel="stylesheet" href="css/animate.css"> -->
+    <link rel="stylesheet" href="css/responsive.css">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
-        <div class="row">
-            <div class="col-md-8 mx-auto text-center">
-                <p class="display-4">Regressing Times Video</p>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+
+
+
+    <!-- Js -->
+    <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/plugins.js"></script>
+    <script src="js/min/waypoints.min.js"></script>
+    <script src="js/jquery.counterup.js"></script>
+    <!-- ICON NEEDS FONT AWESOME FOR CHEVRON UP ICON -->
+
+
+    <script src="js/main.js"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics goes here pal-->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-166983259-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-166983259-1');
+    </script>
+
+    <!-- mailchimp pop-up integration -->
+    <script
+        id="mcjs">!function (c, h, i, m, p) { m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(m, p) }(document, "script", "https://chimpstatic.com/mcjs-connected/js/users/ce3d72c843c669c19339f4085/9a9ed3236e7b1894a45f8f272.js");</script>
+
+
+</head>
+
+<body>
+
+
+    {% include nav.html %}
+
+    <main>
+        <div class="container blog-section">
+            <div class="row">
+                <div class="col-md-10 text-left mx-auto">
+
+                    {{ content }}
+
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <section class="newsletter-block">
+
+        <!-- Newsletter section -->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
+
+                    <!-- Begin Mailchimp Signup Form -->
+                    <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet"
+                        type="text/css">
+                    <div id="mc_embed_signup">
+                        <form
+                            action="https://stillwaves.us10.list-manage.com/subscribe/post?u=ce3d72c843c669c19339f4085&amp;id=3097088881"
+                            method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+                            class="validate" target="_blank" novalidate>
+                            <div id="mc_embed_signup_scroll">
+
+                                <label for="mce-EMAIL">SUBSCRIBE</label>
+                                <p>Sign up with your email address.</p>
+                                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL"
+                                    placeholder="email address" required>
+                                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                                        name="b_ce3d72c843c669c19339f4085_3097088881" tabindex="-1" value=""></div>
+                                <div class="clear"><input type="submit" value="Subscribe" name="subscribe"
+                                        id="mc-embedded-subscribe" class="button"></div>
+                            </div>
+                        </form>
+                    </div>
+
+                    <!--End mc_embed_signup-->
+
+                </div>
+
             </div>
         </div>
 
-        <!-- Title -->
-        <h1>{{ page.title }}</h1>
-
-        <!-- Author -->
-        <p class="lead">
-            by {{ page.author }}
-        </p>
-
-
-        {{ content }}
+    </section>
 
 
 
-    </div>
-</section>
+
+    <!-- footer Start -->
+    <footer>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-10 mx-auto text-center">
+
+                    <div class="footer-menu">
+
+                        <ul class="social-icons">
+                            <li>
+                                <a href="https://www.facebook.com/stillwavescanada" target="_blank"
+                                    rel="noopener noreferrer"><i class="fab fa-facebook fa-3x"
+                                        aria-hidden="true"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://www.instagram.com/stillwavesband" target="_blank"
+                                    rel="noopener noreferrer"><i class="fab fa-instagram fa-3x"
+                                        aria-hidden="true"></i></a>
+                            </li>
+                        </ul>
+
+                    </div>
+
+
+                    <p>&copy; 2021</p>
+                    <p><small>Site made by <a href="https://danielcarlyle.carbonmade.com" target="_blank"
+                                rel="noopener noreferrer">DC</a></small></p>
+                </div>
+
+            </div>
+        </div>
+
+
+    </footer>
+
+    <!--
+
+
+            <ul>
+              <li><a class="p-2 text-dark" href="/">Home</a></li>
+              <li><a class="p-2 text-dark" href="bio.html">Bio</a></li>
+              <li><a class="p-2 text-dark" href="portfolio.html">Work</a></li>
+              <li><a class="p-2 text-dark" href="contact.html">Contact</a></li>
+
+            </ul>
+-->
+
+
+    <!-- Return to Top]
+  <a href="javascript:" id="return-to-top"><i class="icon-chevron-up"></i></a>
+
+ -->
+
+    <!--
+
+  <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+
+  -->
+
+
+    <script>
+        if (window.netlifyIdentity) {
+            window.netlifyIdentity.on("init", user => {
+                if (!user) {
+                    window.netlifyIdentity.on("login", () => {
+                        document.location.href = "/admin/";
+                    });
+                }
+            });
+        }
+    </script>
+
+
+</body>
+
+</html>
