--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-  <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
+  <meta name="description"
+    content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
@@ -17,7 +18,7 @@
   <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
   <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -37,13 +38,17 @@
   <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-  
+
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-     
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+
 
 
   <!-- Js -->
@@ -62,95 +67,124 @@
   <script src="js/main.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics goes here pal-->
- <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-166983259-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-166983259-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'UA-166983259-1');
-</script>
+    gtag('config', 'UA-166983259-1');
+  </script>
 
-<!-- mailchimp pop-up integration -->
-<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/ce3d72c843c669c19339f4085/9a9ed3236e7b1894a45f8f272.js");</script>
+  <!-- mailchimp pop-up integration -->
+  <script
+    id="mcjs">!function (c, h, i, m, p) { m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(m, p) }(document, "script", "https://chimpstatic.com/mcjs-connected/js/users/ce3d72c843c669c19339f4085/9a9ed3236e7b1894a45f8f272.js");</script>
 
+  <!-- Facebook Pixel Code -->
+  <script>
+    !function (f, b, e, v, n, t, s) {
+      if (f.fbq) return; n = f.fbq = function () {
+        n.callMethod ?
+        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+      };
+      if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+      n.queue = []; t = b.createElement(e); t.async = !0;
+      t.src = v; s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s)
+    }(window, document, 'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '829285014327530');
+    fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=829285014327530&ev=PageView&noscript=1" /></noscript>
+  <!-- End Facebook Pixel Code -->
 
 </head>
 
 <body>
 
-<main>
-  {{ content }}
-</main>
+  <main>
+    {{ content }}
+  </main>
 
-<section class="newsletter-block">
+  <section class="newsletter-block">
 
-  <!-- Newsletter section -->
-<div class="container">
-  <div class="row">
-     <div class="col-md-12 text-center">
+    <!-- Newsletter section -->
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 text-center">
 
-<!-- Begin Mailchimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
-<div id="mc_embed_signup">
-<form action="https://stillwaves.us10.list-manage.com/subscribe/post?u=ce3d72c843c669c19339f4085&amp;id=3097088881" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
+          <!-- Begin Mailchimp Signup Form -->
+          <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+          <div id="mc_embed_signup">
+            <form
+              action="https://stillwaves.us10.list-manage.com/subscribe/post?u=ce3d72c843c669c19339f4085&amp;id=3097088881"
+              method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+              target="_blank" novalidate>
+              <div id="mc_embed_signup_scroll">
 
-<label for="mce-EMAIL">SUBSCRIBE</label>
-<p>Sign up with your email address.</p>
-<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ce3d72c843c669c19339f4085_3097088881" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                <label for="mce-EMAIL">SUBSCRIBE</label>
+                <p>Sign up with your email address.</p>
+                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address"
+                  required>
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                    name="b_ce3d72c843c669c19339f4085_3097088881" tabindex="-1" value=""></div>
+                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
+                    class="button"></div>
+              </div>
+            </form>
+          </div>
+
+          <!--End mc_embed_signup-->
+
+        </div>
+
+      </div>
     </div>
-</form>
-</div>
 
-<!--End mc_embed_signup-->
-
-</div>
-
-</div>
-</div>
-
-</section>
+  </section>
 
 
 
 
   <!-- footer Start -->
   <footer>
-    
+
     <div class="container">
-       <div class="row">
-          <div class="col-md-10 mx-auto text-center">
+      <div class="row">
+        <div class="col-md-10 mx-auto text-center">
 
-<div class="footer-menu">
+          <div class="footer-menu">
 
-  <ul class="social-icons">
-    <li>
-      <a href="https://www.facebook.com/stillwavescanada" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook fa-3x" aria-hidden="true"></i></a>
-      </li>
-      <li>
-      <a href="https://www.instagram.com/stillwavesband" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram fa-3x" aria-hidden="true"></i></a>
-      </li>
-  </ul>
+            <ul class="social-icons">
+              <li>
+                <a href="https://www.facebook.com/stillwavescanada" target="_blank" rel="noopener noreferrer"><i
+                    class="fab fa-facebook fa-3x" aria-hidden="true"></i></a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/stillwavesband" target="_blank" rel="noopener noreferrer"><i
+                    class="fab fa-instagram fa-3x" aria-hidden="true"></i></a>
+              </li>
+            </ul>
 
-</div>
-
-
-             <p>&copy; 2021</p>
-             <p><small>Site made by <a href="https://danielcarlyle.carbonmade.com" target="_blank" rel="noopener noreferrer">DC</a></small></p>
           </div>
 
-       </div>
-    </div>
-    
-    
-   </footer>    
 
-<!--
+          <p>&copy; 2021</p>
+          <p><small>Site made by <a href="https://danielcarlyle.carbonmade.com" target="_blank"
+                rel="noopener noreferrer">DC</a></small></p>
+        </div>
+
+      </div>
+    </div>
+
+
+  </footer>
+
+  <!--
 
 
             <ul>
