--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,39 +4,42 @@
 <header id="header" role="heading">
 
    <div class="container-fluid">
-           <nav>
-               <h1 class="logo"><a href="index.html"><span class="aqua">Still</span><span class="white">Waves</span></a></h1>
-               <ul class="main-nav">
-            
-                  <li>
-                     <div class="theme-switch">
-                        <div class="switch"></div>
-                     </div>
-                  </li>
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="about.html">About</a></li>
-                  <li><a href="music.html">Music</a></li>
-                  <li><a href="videos.html">Videos</a></li>
-                  <li><a href="contact.html">Contact</a></li>
-                     <li>
-                       <a href="https://www.facebook.com/stillwavescanada" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook" aria-hidden="true"></i></a>
-                       </li>
-                       <li>
-                       <a href="https://www.instagram.com/stillwavesband" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram" aria-hidden="true"></i></a>
-                       </li>
-               </ul>
-               
-               <div class="nav__icon">
-                       <span></span>
-                       <span></span>
-                       <span></span>
+      <nav>
+         <h1 class="logo"><a href="index.html"><span class="aqua">Still</span><span class="white">Waves</span></a></h1>
+         <ul class="main-nav">
+
+            <li>
+               <div class="theme-switch">
+                  <div class="switch"></div>
                </div>
-       </nav>
-       <!--/Nav-->
-   </div>        
+            </li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="blog.html">News</a></li>
+            <li><a href="music.html">Music</a></li>
+            <li><a href="videos.html">Videos</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li>
+               <a href="https://www.facebook.com/stillwavescanada" target="_blank" rel="noopener noreferrer"><i
+                     class="fab fa-facebook" aria-hidden="true"></i></a>
+            </li>
+            <li>
+               <a href="https://www.instagram.com/stillwavesband" target="_blank" rel="noopener noreferrer"><i
+                     class="fab fa-instagram" aria-hidden="true"></i></a>
+            </li>
+         </ul>
+
+         <div class="nav__icon">
+            <span></span>
+            <span></span>
+            <span></span>
+         </div>
+      </nav>
+      <!--/Nav-->
+   </div>
 
 
-   
+
 </header>
 <!--/Header-->
 
@@ -65,4 +68,3 @@
 </header>
 
 -->
-
