--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,7 +86,7 @@
     !function (f, b, e, v, n, t, s) {
       if (f.fbq) return; n = f.fbq = function () {
         n.callMethod ?
-        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
       };
       if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
       n.queue = []; t = b.createElement(e); t.async = !0;
@@ -176,6 +176,8 @@
           <p>&copy; 2021</p>
           <p><small>Site made by <a href="https://danielcarlyle.carbonmade.com" target="_blank"
                 rel="noopener noreferrer">DC</a></small></p>
+          <p><small>Press/Media <a href="https://www.stillwaves.ca/epk" target="_blank"
+                rel="noopener noreferrer">Electronic Press Kit</a></small></p>
         </div>
 
       </div>
