changed nav hover and boxes to container fluid

--- a/_includes/frontpage-header.html
+++ b/_includes/frontpage-header.html
@@ -51,11 +51,12 @@
 </section>
 
 
-<section class="section container">
+<section class="section container-fluid">
    <div class="container-boxes">
 
       <div class="box fill"><a href="music.html">Music</a>
       </div>
+      <div class="box fill"><a href="blog.html">News</a></div>
       <div class="box fill"><a href="#">Shows</a></div>
       <div class="box fill"><a href="about.html">About</a></div>
       <div class="box fill"><a href="videos.html">Videos</a>
